--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Over-Prairie-Trails_6111
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Grove, Frederick Philip
@@ -11,6 +14,8 @@ creator:
     wikipedia: http://en.wikipedia.org/wiki/Frederick_Philip_Grove
 description: Description of seven trips between Gladstone and Falmouth, near the western
   shore of Lake Manitoba, during the years 1917-1918.
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/6111#Over-Prairie-Trails
 gutenberg_issued: '2004-07-01'
 gutenberg_type: Text
 identifiers:
